# streamml

./: .gitignore  README.md  pyproject.toml
images/: screen1
src/netmonitor/: app.py
src/netmonitor/back/: detector_profile_HST.py  detector_profiles_manager.py  notification_service.py  scanner_profile.py  scanner_profiles_manager.py  window.py
src/netmonitor/front/: detector_profiles_tab.py  detector_profiles_tab_pushscreens.py  detector_tab.py  options_tab.py  scanner_profiles_tab.py  scanner_profiles_tab_pushscreens.py  scanner_tab.py  scanner_tab_pushscreens.py
src/netmonitor/styles/: styles.css
src/streamml/: app.py
src/streamml/back/: detector_profile_HST.py  detector_profiles_manager.py
src/streamml/front/: detector_tab.py  detector_tab_pushscreens.py  options_tab.py
src/streamml/styles/: styles.css
