[project]
name = "streamml"
version = "0.1.0"
description = ""
authors = [{ name = "EnricoGuccii", email = "partyka.003@proton.me" }]
requires-python = ">=3.12,<=3.13"
readme = "README.md"
dependencies = [
    "textual (>=6.5.0,<7.0.0)",
    "river (>=0.22.0,<0.23.0)",
    "apscheduler (>=3.11.1,<4.0.0)",
    "tinydb (>=4.8.2,<5.0.0)",
    "python-nmap (>=0.7.1,<0.8.0)",
    "psutil (>=7.1.3,<8.0.0)",
    "ipaddress (>=1.0.23,<2.0.0)",
    "xmltodict (>=1.0.2,<2.0.0)",
    "pyshark (>=0.6,<0.7)",
    "textual-plotext (>=1.0.1,<2.0.0)",
    "scapy>=2.5.0",
    "pytest>=9.0.1",
    "requests>=2.32.5",
    "xdg>=6.0.0",
]

[tool.hatch.build.targets.sdist]
include = ["src/streamml"]

[tool.hatch.build.targets.wheel]
include = ["src/streamml"]

[tool.hatch.build.targets.wheel.sources]
"src/streamml" = "streamml"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
